Add code to split pictures in train/val/test folders

--- a/take_pictures.ipynb
+++ b/take_pictures.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,20 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved ./pictures/gian/gian_68.png\n",
-      "Saved ./pictures/gian/gian_69.png\n",
-      "Saved ./pictures/gian/gian_70.png\n",
-      "Saved ./pictures/gian/gian_71.png\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "save_pictures(name, basedir, file_format)"
    ]
@@ -165,6 +156,94 @@
    "metadata": {},
    "source": [
     "It works, but sometimes you need to spam the \"s\" or \"q\" keys..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Move pictures to train/val/test folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import shutil\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Creating Train / Val / Test folders (One time use)\n",
+    "root_dir = 'pictures/'\n",
+    "dest_dir = 'pictures2/' # or the same as root_dir\n",
+    "classes_dir = ['gian', 'cami']\n",
+    "\n",
+    "val_ratio = 0.25\n",
+    "test_ratio = 0.15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for cls in classes_dir:\n",
+    "    os.makedirs(dest_dir +'train/' + cls, exist_ok=True)\n",
+    "    os.makedirs(dest_dir +'val/' + cls, exist_ok=True)\n",
+    "    os.makedirs(dest_dir +'test/' + cls, exist_ok=True)\n",
+    "\n",
+    "\n",
+    "    # Creating partitions of the data after shuffeling\n",
+    "    src = root_dir + cls # Folder to copy images from\n",
+    "\n",
+    "    allFileNames = os.listdir(src)\n",
+    "    np.random.shuffle(allFileNames)\n",
+    "    train_FileNames, val_FileNames, test_FileNames = np.split(np.array(allFileNames),\n",
+    "                                                              [int(len(allFileNames)* (1 - val_ratio - test_ratio)), \n",
+    "                                                               int(len(allFileNames)* (1 - test_ratio))])\n",
+    "\n",
+    "\n",
+    "    train_FileNames = [src+'/'+ name for name in train_FileNames.tolist()]\n",
+    "    val_FileNames = [src+'/' + name for name in val_FileNames.tolist()]\n",
+    "    test_FileNames = [src+'/' + name for name in test_FileNames.tolist()]\n",
+    "\n",
+    "    print(f'Total images: {len(allFileNames)}')\n",
+    "    print(f'Training: {len(train_FileNames)}')\n",
+    "    print(f'Validation: {len(val_FileNames)}')\n",
+    "    print(f'Testing: {len(test_FileNames)}\\n')\n",
+    "    \n",
+    "\n",
+    "    # Copy-pasting images\n",
+    "    for name in train_FileNames:\n",
+    "        shutil.copy(name, dest_dir +'train/' + cls)\n",
+    "\n",
+    "    for name in val_FileNames:\n",
+    "        shutil.copy(name, dest_dir +'val/' + cls)\n",
+    "\n",
+    "    for name in test_FileNames:\n",
+    "        shutil.copy(name, dest_dir +'test/' + cls)"
    ]
   }
  ],
