Use "try" to avoid crashes; put train/test split fun in separate file

--- a/2D/take_pictures.ipynb
+++ b/2D/take_pictures.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "import cv2 as cv\n",
     "import os\n",
-    "import re"
+    "import re\n",
+    "import IPython.display as ipd"
    ]
   },
   {
@@ -70,7 +71,7 @@
     "        if len(faces) > 0:\n",
     "            (x,y,w,h) = faces[0]\n",
     "            img = img[(y-m):(y+h+m), (x-m):(x+w+m), :]\n",
-    "    return img"
+    "    return img[:,::-1]"
    ]
   },
   {
@@ -79,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_pictures(name, basedir, file_format, crop=True, more_space = 30):\n",
+    "def save_pictures(name, basedir, file_format, crop=True, more_space = 50):\n",
     "    name_basedir = basedir + \"/\" + name + \"/\"\n",
     "    if not os.path.isdir(name_basedir):\n",
     "        print(f\"Created new directory {name_basedir}\")\n",
@@ -108,8 +109,11 @@
     "            frame = crop_picture(frame, more_space)\n",
     "            \n",
     "        # Visualizzazione esterna\n",
-    "        cv.imshow('Video', frame)\n",
-    "        \n",
+    "        try:\n",
+    "            cv.imshow('Video', frame)\n",
+    "        except Exception:\n",
+    "            pass\n",
+    "\n",
     "        # Save is 's' is pressed\n",
     "        if cv.waitKey(1) & 0xFF == ord('s'):\n",
     "            \n",
@@ -119,11 +123,14 @@
     "                i += 1\n",
     "                filename = filename_format.format(i)\n",
     "                cv.imwrite(filename, frame)\n",
+    "                ipd.clear_output(wait=True)\n",
     "                print(f\"Saved {filename}\".replace(\"//\", \"/\"))\n",
     "                \n",
     "        # exit if 'q' is pressed\n",
     "        if cv.waitKey(1) & 0xFF == ord('q'):\n",
     "            break\n",
+    "            \n",
+    "        \n",
     "            \n",
     "    cap.release()\n",
     "    cv.destroyAllWindows()"
@@ -136,8 +143,15 @@
    "outputs": [],
    "source": [
     "name = \"gian\"\n",
-    "basedir = \"./pictures/\"\n",
+    "basedir = \"./pictures_new/\"\n",
     "file_format = \"png\" # or jpg?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hold \"s\" down to save pictures quickly:"
    ]
   },
   {
@@ -148,14 +162,14 @@
    },
    "outputs": [],
    "source": [
-    "save_pictures(name, basedir, file_format)"
+    "save_pictures(name, basedir, file_format, True, 30)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It works, but sometimes you need to spam the \"s\" or \"q\" keys..."
+    "It works, but sometimes you need to spam \"q\" to quit."
    ]
   },
   {
@@ -171,10 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import shutil\n",
-    "import random"
+    "import utils_2d"
    ]
   },
   {
@@ -184,12 +195,8 @@
    "outputs": [],
    "source": [
     "# # Creating Train / Val / Test folders (One time use)\n",
-    "root_dir = 'pictures/'\n",
-    "dest_dir = 'pictures2/' # or the same as root_dir\n",
-    "classes_dir = ['gian', 'cami']\n",
-    "\n",
-    "val_ratio = 0.25\n",
-    "test_ratio = 0.15"
+    "root_dir = 'pictures_neutral'\n",
+    "dest_dir = 'pictures_neutral_split' # or the same as root_dir"
    ]
   },
   {
@@ -198,53 +205,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(1)"
+    "utils_2d.pictures_train_test_val_split(root_dir, dest_dir)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "for cls in classes_dir:\n",
-    "    os.makedirs(dest_dir +'train/' + cls, exist_ok=True)\n",
-    "    os.makedirs(dest_dir +'val/' + cls, exist_ok=True)\n",
-    "    os.makedirs(dest_dir +'test/' + cls, exist_ok=True)\n",
-    "\n",
-    "\n",
-    "    # Creating partitions of the data after shuffeling\n",
-    "    src = root_dir + cls # Folder to copy images from\n",
-    "\n",
-    "    allFileNames = os.listdir(src)\n",
-    "    np.random.shuffle(allFileNames)\n",
-    "    train_FileNames, val_FileNames, test_FileNames = np.split(np.array(allFileNames),\n",
-    "                                                              [int(len(allFileNames)* (1 - val_ratio - test_ratio)), \n",
-    "                                                               int(len(allFileNames)* (1 - test_ratio))])\n",
-    "\n",
-    "\n",
-    "    train_FileNames = [src+'/'+ name for name in train_FileNames.tolist()]\n",
-    "    val_FileNames = [src+'/' + name for name in val_FileNames.tolist()]\n",
-    "    test_FileNames = [src+'/' + name for name in test_FileNames.tolist()]\n",
-    "\n",
-    "    print(f'Total images: {len(allFileNames)}')\n",
-    "    print(f'Training: {len(train_FileNames)}')\n",
-    "    print(f'Validation: {len(val_FileNames)}')\n",
-    "    print(f'Testing: {len(test_FileNames)}\\n')\n",
-    "    \n",
-    "\n",
-    "    # Copy-pasting images\n",
-    "    for name in train_FileNames:\n",
-    "        shutil.copy(name, dest_dir +'train/' + cls)\n",
-    "\n",
-    "    for name in val_FileNames:\n",
-    "        shutil.copy(name, dest_dir +'val/' + cls)\n",
-    "\n",
-    "    for name in test_FileNames:\n",
-    "        shutil.copy(name, dest_dir +'test/' + cls)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
