--- a/Classifiers-Spectrogram_based.ipynb
+++ b/Classifiers-Spectrogram_based.ipynb
@@ -2443,7 +2443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2463,8 +2463,32 @@
       "Epoch 3/10\n",
       "19008/19008 [==============================] - 137s 7ms/sample - loss: 0.4319 - acc: 0.8351 - val_loss: 0.3134 - val_acc: 0.8853\n",
       "Epoch 4/10\n",
-      "15360/19008 [=======================>......] - ETA: 26s - loss: 0.3285 - acc: 0.8762"
+      "19008/19008 [==============================] - 146s 8ms/sample - loss: 0.3231 - acc: 0.8782 - val_loss: 0.2504 - val_acc: 0.9068\n",
+      "Epoch 5/10\n",
+      "19008/19008 [==============================] - 125s 7ms/sample - loss: 0.2726 - acc: 0.8947 - val_loss: 0.2294 - val_acc: 0.9150\n",
+      "Epoch 6/10\n",
+      "19008/19008 [==============================] - 122s 6ms/sample - loss: 0.2335 - acc: 0.9110 - val_loss: 0.2108 - val_acc: 0.9167\n",
+      "Epoch 7/10\n",
+      "19008/19008 [==============================] - 123s 6ms/sample - loss: 0.2041 - acc: 0.9199 - val_loss: 0.1739 - val_acc: 0.9335\n",
+      "Epoch 8/10\n",
+      "19008/19008 [==============================] - 122s 6ms/sample - loss: 0.1782 - acc: 0.9304 - val_loss: 0.1686 - val_acc: 0.9318\n",
+      "Epoch 9/10\n",
+      "19008/19008 [==============================] - 124s 7ms/sample - loss: 0.1691 - acc: 0.9333 - val_loss: 0.1750 - val_acc: 0.9333\n",
+      "Epoch 10/10\n",
+      "19008/19008 [==============================] - 124s 7ms/sample - loss: 0.1505 - acc: 0.9411 - val_loss: 0.1749 - val_acc: 0.9331\n",
+      "CPU times: user 59min 53s, sys: 9min 38s, total: 1h 9min 31s\n",
+      "Wall time: 21min 35s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x1a3cc53cd0>"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2479,14 +2503,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "D0c85SLvAJbu",
     "outputId": "b1dfcfd5-ff0e-4b40-bb8e-260f0563788f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         ale       0.94      0.93      0.94       138\n",
+      "      alinda       0.93      0.90      0.92       144\n",
+      "        gian       0.98      0.88      0.93       162\n",
+      "     jackson       0.95      1.00      0.97      1040\n",
+      "      khaled       0.99      0.65      0.78       172\n",
+      "     nicolas       0.97      1.00      0.98      1049\n",
+      "        theo       0.91      0.88      0.90      1037\n",
+      "    yweweler       0.88      0.92      0.90      1010\n",
+      "\n",
+      "    accuracy                           0.93      4752\n",
+      "   macro avg       0.94      0.89      0.91      4752\n",
+      "weighted avg       0.93      0.93      0.93      4752\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = model.predict_classes(X_val_speaker)\n",
     "print(classification_report(Y_val_nn, y_pred, target_names=target_names))"
@@ -2496,15 +2542,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Best model"
+    "### Best model\n",
+    "Based on the f1-score, the best model is the \"custom cnn\" one. Let's see its result on the test set:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_18 (Conv2D)           (None, 63, 56, 32)        544       \n",
+      "_________________________________________________________________\n",
+      "conv2d_19 (Conv2D)           (None, 30, 27, 64)        32832     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_16 (MaxPooling (None, 14, 12, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_9 (Flatten)          (None, 10752)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_25 (Dense)             (None, 128)               1376384   \n",
+      "_________________________________________________________________\n",
+      "dropout_9 (Dropout)          (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_26 (Dense)             (None, 8)                 1032      \n",
+      "=================================================================\n",
+      "Total params: 1,410,792\n",
+      "Trainable params: 1,410,792\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "Epoch 1/10\n",
+      "23760/23760 [==============================] - 190s 8ms/sample - loss: 1.0524 - acc: 0.6164\n",
+      "Epoch 2/10\n",
+      "23760/23760 [==============================] - 190s 8ms/sample - loss: 0.5812 - acc: 0.7814\n",
+      "Epoch 3/10\n",
+      "23760/23760 [==============================] - 170s 7ms/sample - loss: 0.4071 - acc: 0.8453\n",
+      "Epoch 4/10\n",
+      "23760/23760 [==============================] - 214s 9ms/sample - loss: 0.3100 - acc: 0.8812\n",
+      "Epoch 5/10\n",
+      "23760/23760 [==============================] - 216s 9ms/sample - loss: 0.2616 - acc: 0.9003\n",
+      "Epoch 6/10\n",
+      "23760/23760 [==============================] - 223s 9ms/sample - loss: 0.2219 - acc: 0.9153\n",
+      "Epoch 7/10\n",
+      "23760/23760 [==============================] - 251s 11ms/sample - loss: 0.1936 - acc: 0.9226\n",
+      "Epoch 8/10\n",
+      "23760/23760 [==============================] - 227s 10ms/sample - loss: 0.1720 - acc: 0.9309\n",
+      "Epoch 9/10\n",
+      "23760/23760 [==============================] - 211s 9ms/sample - loss: 0.1602 - acc: 0.9379\n",
+      "Epoch 10/10\n",
+      "23760/23760 [==============================] - 173s 7ms/sample - loss: 0.1446 - acc: 0.9441\n",
+      "CPU times: user 1h 10min 38s, sys: 12min 17s, total: 1h 22min 55s\n",
+      "Wall time: 34min 26s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x1a3e44f690>"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "X_train = np.concatenate([X_train_speaker, X_val_speaker], axis=0)\n",
+    "y_train = np.concatenate([y_train_speaker, y_val_speaker], axis=0)\n",
+    "model = cnn_models.custom_cnn(8, input_shape=input_shape)\n",
+    "model.fit(X_train, y_train,\n",
+    "          batch_size=32,\n",
+    "          epochs=10,\n",
+    "          verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         ale       1.00      0.97      0.98        30\n",
+      "      alinda       1.00      1.00      1.00        30\n",
+      "        gian       1.00      1.00      1.00        30\n",
+      "     jackson       0.83      1.00      0.91        30\n",
+      "      khaled       1.00      0.80      0.89        30\n",
+      "     nicolas       1.00      1.00      1.00        30\n",
+      "        theo       0.91      1.00      0.95        30\n",
+      "    yweweler       1.00      0.93      0.97        30\n",
+      "\n",
+      "    accuracy                           0.96       240\n",
+      "   macro avg       0.97      0.96      0.96       240\n",
+      "weighted avg       0.97      0.96      0.96       240\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_test_nn = np.argmax(y_test_speaker, axis=1)\n",
+    "y_pred = model.predict_classes(X_test_speaker)\n",
+    "print(classification_report(y_test_nn, y_pred, target_names=target_names))"
+   ]
   },
   {
    "cell_type": "markdown",
