New preprocessing for Part 2

--- a/2D/take_pictures.ipynb
+++ b/2D/take_pictures.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,18 +190,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Creating Train / Val / Test folders (One time use)\n",
-    "root_dir = 'pictures_neutral'\n",
-    "dest_dir = 'pictures_neutral_split' # or the same as root_dir"
+    "root_dir = 'pictures_masked'\n",
+    "dest_dir = 'pictures_masked_split' # or the same as root_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
