Small change to box text

--- a/2D/test_model_mask.ipynb
+++ b/2D/test_model_mask.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
     "                \n",
     "            pred = model.predict(gray2[np.newaxis,:,:, np.newaxis])[0]            \n",
     "            text = labels[np.argmax(pred)]\n",
-    "            conf = pred[np.argmax(pred)]\n",
+    "            conf = pred[np.argmax(pred)]*100\n",
     "                \n",
     "            topLeftCornerOfText = (x-m,y-m-5)\n",
     "            bottomLeftCornerOfText = (x-m,y+h+35)    \n",
@@ -314,7 +314,7 @@
     "            cv.rectangle(img,(x-m,y-m),(x+w+m,y+h+m),fontColor,2)\n",
     "            cv.putText(img, f\"{text}\", topLeftCornerOfText,\n",
     "                       font, fontScale, fontColor, lineType)\n",
-    "            cv.putText(img, f\"{conf:.2f}\", bottomLeftCornerOfText,\n",
+    "            cv.putText(img, f\"{conf:.2f}%\", bottomLeftCornerOfText,\n",
     "                       font, fontScale, fontColor, lineType)\n",
     "                    \n",
     "    return img"
@@ -333,19 +333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved test_pictures/17_94.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# spam q to exit, the save function makes exiting lag a bit\n",
     "test_model(model,labels, mask, new_width=200)"
