Commit before proper cleaning of Images folder

--- a/2D/take_pictures.ipynb
+++ b/2D/take_pictures.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,22 +190,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Creating Train / Val / Test folders (One time use)\n",
-    "root_dir = 'pictures_masked'\n",
-    "dest_dir = 'pictures_masked_split' # or the same as root_dir"
+    "root_dir = 'pictures_masked_resized_heavy'\n",
+    "dest_dir = 'pictures_masked_resized_heavy_split' # or the same as root_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current class: alessandro\n",
+      "Total images: 459\n",
+      "Training: 321\n",
+      "Validation: 92\n",
+      "Testing: 46\n",
+      "\n",
+      "Current class: alinda\n",
+      "Total images: 459\n",
+      "Training: 321\n",
+      "Validation: 92\n",
+      "Testing: 46\n",
+      "\n",
+      "Current class: cami\n",
+      "Total images: 459\n",
+      "Training: 321\n",
+      "Validation: 92\n",
+      "Testing: 46\n",
+      "\n",
+      "Current class: gian\n",
+      "Total images: 459\n",
+      "Training: 321\n",
+      "Validation: 92\n",
+      "Testing: 46\n",
+      "\n",
+      "Current class: khaled\n",
+      "Total images: 459\n",
+      "Training: 321\n",
+      "Validation: 92\n",
+      "Testing: 46\n",
+      "\n",
+      "Current class: luca\n",
+      "Total images: 459\n",
+      "Training: 321\n",
+      "Validation: 92\n",
+      "Testing: 46\n",
+      "\n",
+      "Current class: mamma\n",
+      "Total images: 459\n",
+      "Training: 321\n",
+      "Validation: 92\n",
+      "Testing: 46\n",
+      "\n",
+      "Current class: papi\n",
+      "Total images: 459\n",
+      "Training: 321\n",
+      "Validation: 92\n",
+      "Testing: 46\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "utils_2d.pictures_train_test_val_split(root_dir, dest_dir)"
+    "utils_2d.pictures_train_test_val_split(root_dir, dest_dir, verbose=True)"
    ]
   },
   {
