--- a/Images/take_pictures.ipynb
+++ b/Images/take_pictures.ipynb
@@ -20,6 +20,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import utils_2d"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,6 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this is the only time this function is used, so I would not add it to utils_2d\n",
+    "# this is also the only time the face detector from opencv is used\n",
     "def crop_picture(img, more_space=30):\n",
     "    m = more_space # some additional space around the cropped face\n",
     "    if img is not None:\n",
@@ -80,7 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_pictures(name, basedir, file_format, crop=True, more_space = 50):\n",
+    "def save_pictures(name, basedir, file_format = \"png\", crop=True, more_space = 50):\n",
+    "    \n",
     "    name_basedir = basedir + \"/\" + name + \"/\"\n",
     "    if not os.path.isdir(name_basedir):\n",
     "        print(f\"Created new directory {name_basedir}\")\n",
@@ -88,19 +100,10 @@
     "\n",
     "    current_images = [img for img in os.listdir(name_basedir) if img.endswith(file_format)]\n",
     "    \n",
-    "    # latest picture will be the id of the most recent picture in the 'name_basedir' directory\n",
-    "    # so this function will note overwrite old pictures\n",
-    "    # if the \"name_basedir\" directory is empty, it will start from 0\n",
-    "    if len(current_images) == 0:\n",
-    "        latest_picture = -1\n",
-    "    else:\n",
-    "        latest_picture = max([int(re.findall(\"\\d+\", current_images[i])[0]) for i in range(len(current_images))])\n",
-    "        # alternative\n",
-    "        # latest_picture = max([int(current_images[i].split(\"_\")[1].split(\".\")[0]) for i in range(len(current_images))])\n",
-    "    \n",
     "    filename_format = f\"{basedir}/{name}/{name}_\"+\"{}\"+f\".{file_format}\"\n",
     "    \n",
-    "    i = latest_picture\n",
+    "    i = utils_2d.find_last_filename_id(current_images)\n",
+    "    \n",
     "    cap = cv.VideoCapture(0)\n",
     "    while(True):\n",
     "        \n",
@@ -108,10 +111,10 @@
     "        if crop:\n",
     "            frame = crop_picture(frame, more_space)\n",
     "            \n",
-    "        # Visualizzazione esterna\n",
     "        try:\n",
     "            cv.imshow('Video', frame)\n",
-    "        except Exception:\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
     "            pass\n",
     "\n",
     "        # Save is 's' is pressed\n",
@@ -130,10 +133,17 @@
     "        if cv.waitKey(1) & 0xFF == ord('q'):\n",
     "            break\n",
     "            \n",
-    "        \n",
-    "            \n",
     "    cap.release()\n",
     "    cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In case of errors, make sure the webcam is not used by other processes/notebooks.\n",
+    "\n",
+    "Hold \"s\" down to save pictures quickly:"
    ]
   },
   {
@@ -144,25 +154,7 @@
    "source": [
     "name = \"gian\"\n",
     "basedir = \"./pictures_new/\"\n",
-    "file_format = \"png\" # or jpg?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Hold \"s\" down to save pictures quickly:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "save_pictures(name, basedir, file_format, True, 30)"
+    "save_pictures(name, basedir, crop = True, more_space = 30)"
    ]
   },
   {
@@ -171,104 +163,6 @@
    "source": [
     "It works, but sometimes you need to spam \"q\" to quit."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Move pictures to train/val/test folders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import utils_2d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Creating Train / Val / Test folders (One time use)\n",
-    "root_dir = 'pictures_masked_resized_heavy'\n",
-    "dest_dir = 'pictures_masked_resized_heavy_split' # or the same as root_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current class: alessandro\n",
-      "Total images: 459\n",
-      "Training: 321\n",
-      "Validation: 92\n",
-      "Testing: 46\n",
-      "\n",
-      "Current class: alinda\n",
-      "Total images: 459\n",
-      "Training: 321\n",
-      "Validation: 92\n",
-      "Testing: 46\n",
-      "\n",
-      "Current class: cami\n",
-      "Total images: 459\n",
-      "Training: 321\n",
-      "Validation: 92\n",
-      "Testing: 46\n",
-      "\n",
-      "Current class: gian\n",
-      "Total images: 459\n",
-      "Training: 321\n",
-      "Validation: 92\n",
-      "Testing: 46\n",
-      "\n",
-      "Current class: khaled\n",
-      "Total images: 459\n",
-      "Training: 321\n",
-      "Validation: 92\n",
-      "Testing: 46\n",
-      "\n",
-      "Current class: luca\n",
-      "Total images: 459\n",
-      "Training: 321\n",
-      "Validation: 92\n",
-      "Testing: 46\n",
-      "\n",
-      "Current class: mamma\n",
-      "Total images: 459\n",
-      "Training: 321\n",
-      "Validation: 92\n",
-      "Testing: 46\n",
-      "\n",
-      "Current class: papi\n",
-      "Total images: 459\n",
-      "Training: 321\n",
-      "Validation: 92\n",
-      "Testing: 46\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "utils_2d.pictures_train_test_val_split(root_dir, dest_dir, verbose=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
