Improve test_model_audio notebook

--- a/Audio/0_record_audio.ipynb
+++ b/Audio/0_record_audio.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kappa/opt/miniconda3/envs/dsim/lib/python3.7/site-packages/librosa/util/decorators.py:9: NumbaDeprecationWarning: An import was requested from a module that has moved location.\n",
-      "Import requested from: 'numba.decorators', please update to use 'numba.core.decorators' or pin to Numba version 0.48.0. This alias will not be present in Numba version 0.50.0.\n",
-      "  from numba.decorators import jit as optional_jit\n",
-      "/Users/kappa/opt/miniconda3/envs/dsim/lib/python3.7/site-packages/librosa/util/decorators.py:9: NumbaDeprecationWarning: An import was requested from a module that has moved location.\n",
-      "Import of 'jit' requested from: 'numba.decorators', please update to use 'numba.core.decorators' or pin to Numba version 0.48.0. This alias will not be present in Numba version 0.50.0.\n",
-      "  from numba.decorators import jit as optional_jit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# General Imports\n",
     "\n",
@@ -192,26 +179,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import subprocess"
+    "# Imports for this specific part\n",
+    "import subprocess\n",
+    "import os\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "output_dir = \"output/\"\n",
-    "input_dir = \"my_recordings/\" # recordings_dir"
+    "input_dir = \"my_recordings/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,42 +216,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "808a0993ff8649b8bab7fdefe2180dcd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=301.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'output/temp1.wav'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-b75913516beb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"ffmpeg\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"-y\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"-i\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemp3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"-af\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"areverse\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_dir\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'output/temp1.wav'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temp1 = output_dir+\"temp1.wav\"\n",
     "temp2 = output_dir+\"temp2.wav\"\n",
@@ -274,12 +231,10 @@
     "    subprocess.run([\"ffmpeg\", \"-y\", \"-i\", temp1, \"-af\", \"areverse\", temp2])\n",
     "    subprocess.run([\"ffmpeg\", \"-y\", \"-i\", temp2, \"-af\", f\"silenceremove=1:0.1:{db}dB\", temp3])\n",
     "    subprocess.run([\"ffmpeg\", \"-y\", \"-i\", temp3, \"-af\", \"areverse\", output_dir+file])\n",
-    "    try:\n",
     "        \n",
-    "        os.remove(temp1)\n",
-    "        os.remove(temp2)\n",
-    "        os.remove(temp3)\n",
-    "    c"
+    "    os.remove(temp1)\n",
+    "    os.remove(temp2)\n",
+    "    os.remove(temp3)"
    ]
   },
   {
@@ -291,8 +246,8 @@
     "# check the durations of the cut recordings\n",
     "# (shold be less than 2 seconds)\n",
     "durations = []\n",
-    "for file in tqdm(os.listdir(\"output\")):\n",
-    "    sample, sample_rate = librosa.core.load('output/'+file)\n",
+    "for file in tqdm(os.listdir(output_dir)):\n",
+    "    sample, sample_rate = librosa.core.load(output_dir+file)\n",
     "    duration = sample.shape[0]/sample_rate\n",
     "    durations.append(duration)\n",
     "durations"
@@ -305,10 +260,10 @@
    "outputs": [],
    "source": [
     "# test if the cut makes sense (i.e., if number can still be heard)\n",
-    "for rec_file in tqdm(os.listdir(\"output\")):\n",
-    "    rec_rate, rec = wav.read(\"output/\"+rec_file)\n",
+    "for rec_file in tqdm(os.listdir(output_dir)):\n",
+    "    rec_rate, rec = wav.read(output_dir+rec_file)\n",
     "    sd.play(rec, rec_rate)\n",
-    "    time.sleep(1) # without this, the audio cannot be heard..."
+    "    time.sleep(1) # wait for the recording to play before loading the next"
    ]
   },
   {
@@ -335,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
