--- a/Audio/4_test_model_audio.ipynb
+++ b/Audio/4_test_model_audio.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -32,12 +32,14 @@
     "import os\n",
     "from scipy.io import wavfile as wav\n",
     "\n",
-    "from tensorflow import keras"
+    "from tensorflow import keras\n",
+    "\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO:maybe move this function to some .py file\n",
+    "def load_audio_model(models_dir, model_name):\n",
+    "    full_name = models_dir+\"/\"+model_name\n",
+    "\n",
+    "    model = keras.models.load_model(full_name)\n",
+    "    json_name = full_name.replace(\"h5\", \"json\")\n",
+    "\n",
+    "    with open(json_name, \"r\") as jf:\n",
+    "        d = json.load(jf)\n",
+    "    d[\"model\"] = model\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,27 +76,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "digits_model = keras.models.load_model(models_dir+\"digit_recognition.h5\")\n",
-    "speakers_model = keras.models.load_model(models_dir+\"speaker_recognition.h5\")"
+    "# # Spectrogram-based classifiers\n",
+    "# digits_model = load_audio_model(models_dir, \"digit_recognition.h5\")\n",
+    "# speakers_model = load_audio_model(models_dir, \"speaker_recognition.h5\")\n",
+    "# mfcc_speakers_model = load_audio_model(models_dir, \"mfcc_speaker_standard.h5\")\n",
+    "# models = [digits_model, speakers_model, mfcc_speakers_model]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
+      "WARNING:tensorflow:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
+      "WARNING:tensorflow:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Taken from Classifiers-SpectrogramBased\n",
-    "max_rec_length = 9015"
+    "models = [load_audio_model(models_dir, f) for f in os.listdir(models_dir) if f.endswith(\"h5\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -108,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -142,42 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is for SVC classifiers, left for later in case we use them.\n",
-    "# def test_classifiers(clfs, scalers, answer = None, duration=2, rec_rate=8000, directory = \"test/\", filename = \"test.wav\"):\n",
-    "#     create_recording(duration, rec_rate, filename, directory)   \n",
-    "#     ipd.clear_output()\n",
-    "#     trim_audio(filename, directory, directory, db = -40)\n",
-    "#     _, rec = wav.read(directory + \"/\" + filename)\n",
-    "#     sd.play(rec, rec_rate)\n",
-    "#     rec_features = combo(rec.flatten())\n",
-    "#     scaled_features = [0]*len(clfs)\n",
-    "#     preds = scaled_features\n",
-    "#     for i in range(len(clfs)):\n",
-    "#         scaled_features[i] = scalers[i].transform([rec_features])\n",
-    "#         preds[i] = clfs[i].predict(scaled_features[i])[0]\n",
-    "#         print(\"Classifier {} prediction: {}\".format(i+1, preds[i]))\n",
-    "#     if answer is not None:\n",
-    "#         print((\"Correct answer: \"+ \", \".join([\"{}\"]*len(answer))).format(*answer))\n",
-    "#     return preds"
+    "# Taken from Classifiers-SpectrogramBased\n",
+    "max_rec_length = 9015"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Taken from Classifiers-Spectrogram_based\n",
-    "target_names = ['ale', 'alinda', 'gian', 'jackson', 'khaled', 'nicolas', 'theo', 'theo']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -186,7 +194,7 @@
    "outputs": [],
    "source": [
     "# Debugging comments are left for the moment\n",
-    "def test_NN(speaker_net, digit_net, max_rec_length, target_names, answer = None,\n",
+    "def test_NN(models, max_rec_length, answer = None,\n",
     "            duration=2, rec_rate=8000, directory = \"test/\",\n",
     "            filename = \"test.wav\", db=-48):\n",
     "    create_recording(duration, rec_rate, filename, directory)   \n",
@@ -207,39 +215,59 @@
     "        len_rec = rec.shape[0]\n",
     "        db = int(db*0.95) # trim more violently at each step\n",
     "        \n",
+    "    # TODO: is the padding the same for mfcc models?\n",
     "    rec = data_preparation.padding(max_rec_length, rec)\n",
+    "    \n",
     "    # print(\"After padding\")\n",
     "    # print(rec.shape)\n",
     "    # sd.play(rec, rec_rate)\n",
     "    \n",
-    "    print(\"Computing features...\")\n",
-    "    rec = data_preparation.compute_spectrogram(rec, normalize=True)\n",
-    "    rec = rec[np.newaxis,:,:,np.newaxis]\n",
-    "    \n",
-    "    \n",
-    "    print(\"Predicting...\")\n",
-    "    speaker_pred= target_names[speaker_net.predict_classes(rec)[0]]\n",
-    "    digit_pred= digit_net.predict_classes(rec)[0]\n",
-    "    \n",
-    "    print(f\"\\nPrediction: {speaker_pred}, {digit_pred}\")\n",
+    "    preds = []\n",
+    "    print(\"Predicting...\\n\")\n",
+    "    for model in models:\n",
+    "        if model[\"type\"] == \"spectrogram\":\n",
+    "            proc_rec = data_preparation.compute_spectrogram(rec, normalize=True)\n",
+    "        else:\n",
+    "            # TODO: is the padding the same for mfcc models?\n",
+    "            proc_rec = data_preparation.mfcc(rec, flatten = False)\n",
+    "        proc_rec = proc_rec[np.newaxis,:,:,np.newaxis]\n",
+    "        pred = model[\"class_indices\"][model[\"model\"].predict_classes(proc_rec)[0]]\n",
+    "        preds.append(pred)\n",
+    "        print(\"{:50s}{}\".format(model[\"name\"]+\" prediction: \", pred))\n",
+    "\n",
     "    # print(\"Model prediction: {}\".format(preds[0]))\n",
     "    if answer is not None:\n",
-    "        print(f\"Correct answer {answer}\")\n",
-    "    return speaker_pred, digit_pred, rec, rec_rate"
+    "        print(\"\\nCorrect answer: {}, {}\".format(*answer))\n",
+    "    return preds, rec, rec_rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "K-M4mw6KAJcW",
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trimming recording...\n",
+      "Predicting...\n",
+      "\n",
+      "Spectrogram-based digit classifier prediction:    1\n",
+      "MFCC-based speaker classifier prediction:         jackson\n",
+      "Spectrogram-based speaker classifier prediction:  jackson\n",
+      "\n",
+      "Correct answer: gian, 1\n"
+     ]
+    }
+   ],
    "source": [
-    "speaker_pred, digit_pred, rec, rec_rate = test_NN(speakers_model, digits_model, max_rec_length, target_names)"
+    "preds, rec, rec_rate = test_NN(models, max_rec_length, answer=[\"gian\", 1])"
    ]
   },
   {
