--- a/Audio/4_test_model_audio.ipynb
+++ b/Audio/4_test_model_audio.ipynb
@@ -109,6 +109,38 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = sorted(models, key = lambda x : x[\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MFCC-based speaker classifier',\n",
+       " 'Spectrogram-based digit classifier',\n",
+       " 'Spectrogram-based speaker classifier']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort by name\n",
+    "[model[\"name\"] for model in models]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -141,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -175,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -243,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -258,16 +290,16 @@
       "Trimming recording...\n",
       "Predicting...\n",
       "\n",
-      "Spectrogram-based digit classifier prediction:    1\n",
       "MFCC-based speaker classifier prediction:         jackson\n",
-      "Spectrogram-based speaker classifier prediction:  jackson\n",
+      "Spectrogram-based digit classifier prediction:    1\n",
+      "Spectrogram-based speaker classifier prediction:  gian\n",
       "\n",
-      "Correct answer: gian, 1\n"
+      "Correct answer: gian, 5\n"
      ]
     }
    ],
    "source": [
-    "preds, rec, rec_rate = test_NN(models, max_rec_length, answer=[\"gian\", 1])"
+    "preds, rec, rec_rate = test_NN(models, max_rec_length, answer=[\"gian\", 5])"
    ]
   },
   {
