--- a/Audio/4_test_model_audio.ipynb
+++ b/Audio/4_test_model_audio.ipynb
@@ -226,7 +226,7 @@
    "outputs": [],
    "source": [
     "# Debugging comments are left for the moment\n",
-    "def test_NN(models, max_rec_length, answer = None,\n",
+    "def test_nets(models, max_rec_length, answer = None,\n",
     "            duration=2, rec_rate=8000, directory = \"test/\",\n",
     "            filename = \"test.wav\", db=-48):\n",
     "    create_recording(duration, rec_rate, filename, directory)   \n",
@@ -234,7 +234,7 @@
     "    \n",
     "    # this is not great, but at least we make sure that the audio is trimmed\n",
     "    # TODO: find better solution\n",
-    "    len_rec = 10000\n",
+    "    len_rec = max_rec_length + 1\n",
     "    # print(\"Before padding\")\n",
     "    print(\"Trimming recording...\")\n",
     "    while len_rec > max_rec_length:\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -291,15 +291,15 @@
       "Predicting...\n",
       "\n",
       "MFCC-based speaker classifier prediction:         jackson\n",
-      "Spectrogram-based digit classifier prediction:    1\n",
-      "Spectrogram-based speaker classifier prediction:  gian\n",
+      "Spectrogram-based digit classifier prediction:    5\n",
+      "Spectrogram-based speaker classifier prediction:  jackson\n",
       "\n",
       "Correct answer: gian, 5\n"
      ]
     }
    ],
    "source": [
-    "preds, rec, rec_rate = test_NN(models, max_rec_length, answer=[\"gian\", 5])"
+    "preds, rec, rec_rate = test_nets(models, max_rec_length, answer=[\"gian\", 5])"
    ]
   },
   {
