Update retrieval nb; small changes to utils_2d and audio test nb

--- a/Audio/4_test_model_audio.ipynb
+++ b/Audio/4_test_model_audio.ipynb
@@ -148,13 +148,13 @@
    },
    "outputs": [],
    "source": [
-    "def create_recording(duration, rec_rate, name = \"test.wav\", output_dir = \"test/\"):\n",
+    "def create_recording(duration, rec_rate, name = \"test.wav\", output_dir = \"test/\", wait_time = 0.5):\n",
     "    print(\"Ready in 3...\", end = \"\")\n",
-    "    time.sleep(1)\n",
+    "    time.sleep(wait_time)\n",
     "    print(\"2...\", end = \"\")\n",
-    "    time.sleep(1)\n",
+    "    time.sleep(wait_time)\n",
     "    print(\"1...\")\n",
-    "    time.sleep(1)\n",
+    "    time.sleep(wait_time)\n",
     "    print(\"Go.\")\n",
     "    rec = sd.rec(int(duration * rec_rate), samplerate=rec_rate, channels=1, blocking=True)\n",
     "    print(\"Playing the recording.\")\n",
@@ -228,8 +228,8 @@
     "# Debugging comments are left for the moment\n",
     "def test_nets(models, max_rec_length, answer = None,\n",
     "            duration=2, rec_rate=8000, directory = \"test/\",\n",
-    "            filename = \"test.wav\", db=-48):\n",
-    "    create_recording(duration, rec_rate, filename, directory)   \n",
+    "            filename = \"test.wav\", wait_time=0.5, db=-48):\n",
+    "    create_recording(duration, rec_rate, filename, directory, wait_time=wait_time)   \n",
     "    ipd.clear_output()\n",
     "    \n",
     "    # this is not great, but at least we make sure that the audio is trimmed\n",
@@ -246,8 +246,7 @@
     "        # print(rec.shape)\n",
     "        len_rec = rec.shape[0]\n",
     "        db = int(db*0.95) # trim more violently at each step\n",
-    "        \n",
-    "    # TODO: is the padding the same for mfcc models?\n",
+    "\n",
     "    rec = data_preparation.padding(max_rec_length, rec)\n",
     "    \n",
     "    # print(\"After padding\")\n",
@@ -260,7 +259,6 @@
     "        if model[\"type\"] == \"spectrogram\":\n",
     "            proc_rec = data_preparation.compute_spectrogram(rec, normalize=True)\n",
     "        else:\n",
-    "            # TODO: is the padding the same for mfcc models?\n",
     "            proc_rec = data_preparation.mfcc(rec, flatten = False)\n",
     "        proc_rec = proc_rec[np.newaxis,:,:,np.newaxis]\n",
     "        pred = model[\"class_indices\"][model[\"model\"].predict_classes(proc_rec)[0]]\n",
@@ -275,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -291,15 +289,15 @@
       "Predicting...\n",
       "\n",
       "MFCC-based speaker classifier prediction:         jackson\n",
-      "Spectrogram-based digit classifier prediction:    5\n",
+      "Spectrogram-based digit classifier prediction:    8\n",
       "Spectrogram-based speaker classifier prediction:  jackson\n",
       "\n",
-      "Correct answer: gian, 5\n"
+      "Correct answer: gian, 8\n"
      ]
     }
    ],
    "source": [
-    "preds, rec, rec_rate = test_nets(models, max_rec_length, answer=[\"gian\", 5])"
+    "preds, rec, rec_rate = test_nets(models, max_rec_length, answer=[\"gian\", 8])"
    ]
   },
   {
