Change function for testing a single picture

--- a/Images/0_take_pictures.ipynb
+++ b/Images/0_take_pictures.ipynb
@@ -73,12 +73,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this is the only time this function is used, so I would not add it to utils_2d\n",
-    "# this is also the only time the face detector from opencv is used\n",
     "def crop_picture(img, more_space=30):\n",
     "    m = more_space # some additional space around the cropped face\n",
     "    if img is not None:\n",
-    "        faces = face_detector.detectMultiScale(img[:,:,1]) # (img_gray)\n",
+    "        faces = face_detector.detectMultiScale(img[:,:,1])\n",
     "        if len(faces) > 0:\n",
     "            (x,y,w,h) = faces[0]\n",
     "            img = img[(y-m):(y+h+m), (x-m):(x+w+m), :]\n",
@@ -114,23 +112,26 @@
     "        try:\n",
     "            cv.imshow('Video', frame)\n",
     "        except Exception as e:\n",
-    "            print(e)\n",
+    "            # uncomment for debugging\n",
+    "            # print(e)\n",
     "            pass\n",
     "\n",
+    "        \n",
+    "        key = cv.waitKey(1)\n",
+    "        \n",
+    "        if (key & 0xFF) == ord('s'):    \n",
     "        # Save is 's' is pressed\n",
-    "        if cv.waitKey(1) & 0xFF == ord('s'):\n",
-    "            \n",
-    "            # If crop is set to true, to make sure that the image has been cropped we check if it is a square\n",
     "            if frame.shape[0] == frame.shape[1] or (not crop):\n",
-    "                \n",
+    "                # If crop is set to true, to make sure that the image\n",
+    "                # has been cropped we check if it is a square\n",
     "                i += 1\n",
     "                filename = filename_format.format(i)\n",
     "                cv.imwrite(filename, frame)\n",
     "                ipd.clear_output(wait=True)\n",
     "                print(f\"Saved {filename}\".replace(\"//\", \"/\"))\n",
     "                \n",
+    "        elif (key & 0xFF) == ord('q'):\n",
     "        # exit if 'q' is pressed\n",
-    "        if cv.waitKey(1) & 0xFF == ord('q'):\n",
     "            break\n",
     "            \n",
     "    cap.release()\n",
@@ -143,7 +144,7 @@
    "source": [
     "In case of errors, make sure the webcam is not used by other processes/notebooks.\n",
     "\n",
-    "Hold \"s\" down to save pictures quickly:"
+    "Hold down \"s\" to save pictures quickly:"
    ]
   },
   {
@@ -155,13 +156,6 @@
     "name = \"gian\"\n",
     "basedir = \"./pictures_new/\"\n",
     "save_pictures(name, basedir, crop = True, more_space = 30)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It works, but sometimes you need to spam \"q\" to quit."
    ]
   }
  ],
@@ -181,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
